@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+GCJ Command Line v1.0-beta2, released 2011-05-05
+
+[Feature]: Added support for practice contests.
+
+-------------------------------------------------------------------------------
 GCJ Command Line v1.0-beta1, released 2011-04-29
 
 [Feature]: Initial release.
